--- a/src/App.css
+++ b/src/App.css
@@ -160,7 +160,10 @@ table {
 
 
     .sec2 {
+      margin-top: 2vh;
+      margin-bottom: 6vh;
       table {
+        width: 90vw;
         font-size: 14px;
         font-weight: 500;
       }
