--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ body {
   overflow: hidden;
 
   .image {
-    height: 80vh;
+    height: auto;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -112,7 +112,7 @@ table {
       }
 
       .card-header {
-        height: 60vh;
+        height: 100%;
         display: flex;
         overflow: hidden;
 
@@ -161,7 +161,7 @@ table {
 
     .sec2 {
       margin-top: 2vh;
-      margin-bottom: 6vh;
+      margin-bottom: 2vh;
       table {
         width: 90vw;
         font-size: 14px;
